# cob_gazebo_plugins

./: README.md
cob_gazebo_plugins/: CMakeLists.txt  package.xml
cob_gazebo_ros_control/: CMakeLists.txt  package.xml
cob_gazebo_ros_control/include/cob_gazebo_ros_control/: hwi_switch_gazebo_ros_control_plugin.h  hwi_switch_robot_hw_sim.h
cob_gazebo_ros_control/src/: hwi_switch_gazebo_ros_control_plugin.cpp  hwi_switch_robot_hw_sim.cpp
