<package format="2">
  <name>cob_gazebo_plugins</name>
  <version>0.7.5</version>
  <description>cob_gazebo_plugins meta-package</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_gazebo_plugins</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_generators</exec_depend>

  <depend>cob_gazebo_ros_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
